# ASCIITermDraw-Benchmark

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  PROJECT_HANDOFF.md  README.md  STATUS.md  generate_benchmark.py  package-lock.json  package.json  pyproject.toml  termdraw_benchmark_spec.md
.github/workflows/: deploy-pages.yml
oneshot/: c1_example.txt  c2_example.txt  c3_example_ansilove.asc  c4_example.txt
scripts/: README.md  __init__.py  eval.py  render.py  render_all.py  run_model.py  run_vlm_judge.py  run_vlm_judge_instructor.py  smoke_generate.py
scripts/backends/: __init__.py  ollama.py  together.py
scripts/benchmark/: __init__.py  audit.py  build.py  io.py  oneshots.py  prompts.py  snapshot.py  tasks.py
scripts/benchmark/data/: category_1.json  category_2.json  category_3.json  category_4.json
scripts/examples/: render_ansilove_sample.sh  render_playwright_sample.mjs
scripts/judge/: compute_metrics.py  geval_metrics.py  geval_support.py  judge_schema.py  run_geval_judge.py  run_vlm_judge.py  shared_judge_contract.txt
scripts/lib/: __init__.py  checker.py  fireworks_api.py  openrouter_api.py  together_api.py
scripts/rendered/: render.py  render_all.py  render_ascii.mjs
scripts/renderers/: render_ascii.mjs
tasks/box-layout-basics/1.1/: assertions.json  prompt.txt  vlm_judge_prompt.txt
tasks/box-layout-basics/1.10/: assertions.json  prompt.txt  reference.ascii  vlm_judge_prompt.txt
tasks/box-layout-basics/1.11/: assertions.json  prompt.txt  vlm_judge_prompt.txt
tasks/box-layout-basics/1.12/: prompt.txt  reference.ascii  vlm_judge_prompt.txt
tasks/box-layout-basics/1.13/: assertions.json  prompt.txt  (+2 more)
website/: 404.html  README.md  app.js  build_site_data.mjs  build_site_data.py  index.html  quickstart.html  site_data.json  style.css
website/pages/: leaderboard.html  quickstart.html  tasks.html
website/tools/: build_site_data.mjs
(+626 files in other folders)
