[project]
name = "termdraw-bench"
version = "0.1.0"
description = "Benchmark for structured ASCII diagram generation and editing."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.32.0",
  "pydantic>=2.8.0",
  "openai>=1.35.0",
  "anthropic>=0.57.1",
  "deepeval>=3.9.6",
]

[project.scripts]
eval = "scripts.eval:main"
smoke = "scripts.smoke_generate:main"
run-model = "scripts.run_model:main"
judge-geval = "scripts.judge.run_geval_judge:main"
compute-metrics = "scripts.judge.compute_metrics:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.hatch.build.targets.wheel.force-include]
scripts = "scripts"
